[0.3.0.0 - Beta	   xx/November/2008]
+ added support for MPEGLAYER3WAVEFORMAT structure
+ added support for MPEG1WAVEFORMAT structure
+ BITMAPINFOHEADER::biCompression is now also displayed as fourCC string
+ added property page for IAMBufferNegotiation interface
+ AboutBox MONOGRAM link navigates to home page

[0.2.9.0 - Beta	   5/October/2008]
+ added MEDIASUBTYPE_NV12 to the list of uncompressed video subtypes
+ added "Insert File Writer" item for output pins delivering MEDIATYPE_Stream (e.g. mux filter output)
+ added "MERIT_DO_NOT_USE+1" and "MERIT_UNLIKELY+1" presets into the merit changer form
+ %PROGRAMFILES%, %SYSTEMROOT%, %WINDIR% are now properly expanded
+ added "Comatible filters" submenu for output pins

[0.2.8.0 - Beta    31/August/2008]
+ added support for ACM codec configuration (via IAMStreamConfig interface)
+ added support for stream selection via IAMStreamSelect interface
+ added decoder performance testing tool
+ pressing "Enter" in the filters form will create a new instance of a filter
+ added "Locate" button to find filter DLL files quickly
+ added "Unregister" feature to remove filters. (works also for missing DLLs)
+ added merit changing functionality
+ seeking form now displays current seeking capabilities and supported time formats

[0.2.7.0 - Beta	   24/July/2008]
+ added support for Enhanced Video Renderer
+ added support for DMO objects (but it's not possible to duplicate "CTRL-D" a DMO filter once created)

[0.2.6.0 - Beta    22/June/2008]
+ fixed bug with bad offset of VIDEOINFOHEADER2 extradata
+ added support for VFW property pages
+ added support for IAMVideoCompression interface

[0.2.5.0 - Beta	   17/June/2008]
+ added seeking dialog
+ added WAVEFORMATEXTENSIBLE parsing
+ added additional extradata parsing after VIDEOINFOHEADER & VIDEOINFOHEADER2
+ added some new GUIDs
+ added new event scheduling dialog
+ added support for schedule events via XML

[0.2.4.0 - Beta    11/May/2008]
+ added graph clock control and filter icons
