@@ -69,7 +69,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="strmbasdu.lib strmiids.lib winmm.lib mfuuid.lib msdmo.lib"
+				AdditionalDependencies="strmbasdu.lib strmiids.lib winmm.lib mfuuid.lib msdmo.lib Dmoguids.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -153,7 +153,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="strmbaseus.lib strmiids.lib winmm.lib mfuuid.lib msdmo.lib"
+				AdditionalDependencies="strmbaseus.lib strmiids.lib winmm.lib mfuuid.lib msdmo.lib Dmoguids.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -501,6 +501,14 @@
 			</File>
 			<File
 				RelativePath=".\src\PropertyForm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\WMADecPage.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\WMADecPage.h"
 				>
 			</File>
 		</Filter>
