@@ -1,0 +1,44 @@
+//-----------------------------------------------------------------------------
+//
+//	MONOGRAM GraphStudio
+//
+//	Author : Igor Janos
+//
+//-----------------------------------------------------------------------------
+#pragma once
+
+
+//-----------------------------------------------------------------------------
+//
+//	CWMADecPage class
+//
+//-----------------------------------------------------------------------------
+class CWMADecPage : public CMFCPropertyPage
+{
+protected:
+	DECLARE_MESSAGE_MAP()
+
+public:
+
+	GraphStudio::TitleBar				title;
+	CButton								check_hires;
+
+	CComPtr<IMediaObject>				dmo;
+
+	enum { IDD = IDD_DIALOG_WMADECODER };
+public:
+	CWMADecPage(LPUNKNOWN pUnk, HRESULT *phr, LPCTSTR strTitle);
+	virtual ~CWMADecPage();
+	
+	// overriden
+	virtual BOOL OnInitDialog();
+	virtual void DoDataExchange(CDataExchange* pDX);    // DDX/DDV support
+	void OnSize(UINT nType, int cx, int cy);
+	void OnHiResClick();
+
+    virtual HRESULT OnConnect(IUnknown *pUnknown);
+    virtual HRESULT OnDisconnect();
+	virtual HRESULT OnActivate();
+	virtual HRESULT OnApplyChanges();
+};
+
